@@ -33,6 +33,9 @@ Known Issues
 Development Version
 ===================
 
+HEAD
+    - BUGFIX: Fixed issue for GoogleAppEngine (GAE) which somehow handles codecs differently. ``parseUrl`` should work now.
+
 0.9.8
 -----
 0.9.8 final 111210
